--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,15 @@
-@font-face {
-	font-family: "LINE Seed Sans TH";
-	font-weight: 100;
-	src: url(https://itp1.itopfile.com/ContentImage/z_itp_130820236l5w/fonts/LINESeedSansTH/LINESeedSansTH_Th.otf) format("opentype");
-}
-
-@font-face {
-	font-family: "LINE Seed Sans TH";
-	font-weight: 400;
-	src: url(https://itp1.itopfile.com/ContentImage/z_itp_130820236l5w/fonts/LINESeedSansTH/LINESeedSansTH_Rg.otf) format("opentype");
-}
-
-@font-face {
-	font-family: "LINE Seed Sans TH";
-	font-weight: 600;
-	src: url(https://itp1.itopfile.com/ContentImage/z_itp_130820236l5w/fonts/LINESeedSansTH/LINESeedSansTH_Bd.otf) format("opentype");
-}
-
-@font-face {
-	font-family: "LINE Seed Sans TH";
-	font-weight: 800;
-	src: url(https://itp1.itopfile.com/ContentImage/z_itp_130820236l5w/fonts/LINESeedSansTH/LINESeedSansTH_XBd.otf) format("opentype");
-}
-
-@font-face {
-	font-family: "LINE Seed Sans TH";
-	font-weight: 900;
-	src: url(https://itp1.itopfile.com/ContentImage/z_itp_130820236l5w/fonts/LINESeedSansTH/LINESeedSansTH_He.otf) format("opentype");
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 body {
 	--color1: #282828;
 	--color2: #fff;
 	margin: 0;
 	padding: 0;
-	font-size: clamp(16px, 1vw, 18px);
-	font-family: "LINE Seed Sans TH";
+	font-size: clamp(14px, 1vw, 16px);
+	font-family: "Inter", sans-serif;
 	background: var(--color2);
 	color: var(--color1);
+	transition: .3s;
 }
 
 body.dark-mode {
@@ -48,7 +21,6 @@ body::-webkit-scrollbar {
 	opacity: 0;
 	width: 0;
 }
-
 
 a {
 	color: var(--color1);
