--- a/src/css/main.css
+++ b/src/css/main.css
@@ -77,94 +77,9 @@ button {
   cursor: pointer;
 }
 
-.dashboard-layout {
+.App-layout {
   display: grid;
   grid-template-columns: 18% auto clamp(30px, 4%, 60px);
-}
-
-.dashboard-section {
-  display: flex;
-  flex-direction: column;
-
-  background: var(--main-bg);
-  gap: var(--gap);
-  min-height: 1500px;
-}
-
-.top-section {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  gap: var(--gap);
-  padding: 10px var(--gap);
-  background: var(--sub-color);
-}
-
-.head-page {
-  text-transform: uppercase;
-}
-
-.mid-section {
-  display: flex;
-  flex-direction: column;
-  gap: var(--gap);
-  padding: var(--gap);
-}
-
-.bottom-section {
-  --main-color: #1b1b1b;
-  --sub-color: #101011;
-}
-
-.search-box {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-
-.search-box input {
-  width: 15vw;
-  border-radius: 30px;
-  height: 100%;
-  border: 1.5px solid #ccc;
-  background: var(--sub-color);
-  padding-left: 15px;
-}
-.search-box input:focus {
-  outline: none;
-}
-
-.search-icon {
-  display: grid;
-  place-items: center;
-  position: relative;
-  right: 3vw;
-  background: var(--main-color2);
-  border-radius: 50%;
-  padding: 5px;
-  height: 20px;
-  width: 20px;
-}
-
-.search-icon img {
-  width: 80%;
-  filter: invert(1);
-}
-
-.social-panel {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.social-panel img {
-  aspect-ratio: 1;
-  width: 25px;
-  filter: brightness(0) invert(15%) sepia(100%) saturate(6000%) hue-rotate(270deg);
-}
-
-body.dark-mode .social-panel img {
-  filter: invert(1);
 }
 
 .mockup {
