--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 :root {
   --main-white: #fff;
   --main-overlay: #fafafa;
-  --font: #888;
+  --font1: #666;
   --font2: #282828;
   --font3: #aaa;
   --btn-color: linear-gradient(to right, #ca409f 0%, #6f36ff 100%);
+  --btn-color2: linear-gradient(to right, #fff 0%, #fff 100%);
   --btn-font: #fff;
   --border-color: #e8e8e8;
   --box-shadow1: rgba(0, 0, 0, 0.15) 0px 5px 15px;
@@ -17,16 +19,16 @@ body {
   margin: 0;
   padding: 0;
   font-size: clamp(14px, 1vw, 16px);
-  font-family: "Inter", sans-serif;
+  font-family: "Roboto", sans-serif;
   overflow-y: hidden;
   background: var(--main-overlay);
-  color: var(--font);
+  color: var(--font1);
 }
 
 body.dark-mode {
   --main-overlay: #121212;
   --main-white: #181818;
-  --font: #fff;
+  --font1: #fff;
   --font2: #fff;
   --border-color: transparent;
   & a.nav-link img {
@@ -40,6 +42,30 @@ section::-webkit-scrollbar {
   width: 0;
 }
 
+header {
+  position: sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  gap: 20px;
+  height: 50px;
+  background: var(--main-white);
+  border-bottom: 1px solid var(--border-color);
+  padding: 0 var(--gap);
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  background: var(--main-white);
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  height: 50px;
+  border-top: 1px solid var(--border-color);
+}
+
 img {
   width: 100%;
 }
@@ -48,6 +74,7 @@ a {
   font-size: clamp(14px, 1vw, 14px);
   text-decoration: none;
   text-transform: uppercase;
+  color: var(--font1);
 }
 
 h1 {
@@ -68,56 +95,43 @@ h3 {
 }
 
 button {
+  position: relative;
   background: var(--btn-color);
   color: var(--btn-font);
   font-size: clamp(14px, 1vw, 16px);
-  border-radius: 8px;
+  border-radius: 30px;
   padding: 10px 15px;
   min-width: 5vw;
   width: fit-content;
   border: none;
   cursor: pointer;
   height: fit-content;
+  overflow: hidden;
+  transition: 0.5s;
+}
+
+button:hover {
 }
 
 #app {
   position: relative;
 }
 
-header {
-  position: sticky;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  gap: 20px;
-  height: 50px;
-  background: var(--main-white);
-  border-bottom: 1px solid var(--border-color);
-  padding: 0 var(--gap);
-}
-
-footer {
-  background: var(--main-white);
-  position: fixed;
-  width: 100%;
-  bottom: 0;
-  height: 50px;
-  border-top: 1px solid var(--border-color);
-}
-
 #App-layout {
   position: relative;
   display: grid;
-  grid-template-columns: 15vw auto 3vw;
+  grid-template-columns: 15vw auto;
   height: 100%;
 }
 
 aside {
-  background: var(--main-white);
   position: sticky;
   top: 0;
   height: 100vh;
+  background: var(--main-white);
+}
+
+aside.left {
   border-right: 1px solid var(--border-color);
 }
 
@@ -144,7 +158,7 @@ article {
   display: flex;
   flex-direction: column;
   gap: 2vw;
-  padding: 2vw;
+  padding: 1.5vw;
 }
 
 .mid-aside {
@@ -173,47 +187,38 @@ body.dark-mode .nav-logo img {
 .nav-menu {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
 }
 
 .nav-aside span {
   font-size: clamp(12px, 0.5vw, 14px);
   text-transform: uppercase;
   color: var(--font3);
+  margin-bottom: 5px;
 }
 
 a.nav-link {
   display: flex;
   align-items: flex-end;
   gap: 10px;
-  color: var(--font1);
+  padding: 12px 15px;
+  border-radius: 7px;
   font-weight: 500;
 }
 
 a.nav-link:hover {
-  color: var(--font2);
+  background: var(--btn-color);
+  color: #fff;
 }
 
 a.nav-link img {
   aspect-ratio: 1;
   width: 20px;
-  filter: brightness(0) saturate(100%) invert(52%) sepia(12%) saturate(3000%) hue-rotate(226deg) brightness(100%) contrast(106%);
+  filter: contrast(0.3);
+}
+
+a.nav-link:hover img {
+  filter: invert(1);
 }
 
 /*Nav Aside*/
-.font-group {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  width: 100%;
-  gap: 20px;
-}
-
-.font-items {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  border-radius: 10px;
-  background: var(--main-white);
-  height: fit-content;
-  box-shadow: var(--box-shadow1);
-}
