--- a/src/css/app.css
+++ b/src/css/app.css
@@ -60,23 +60,29 @@ img {
 }
 
 h1 {
-  font-size: clamp(26px, 4vw, 68px);
+  font-size: clamp(24px, 4vw, 68px);
   font-weight: 200;
   line-height: 1.2;
   margin: 0;
 }
 
 h2 {
-  font-size: clamp(20px, 4vw, 30px);
-  font-weight: 600;
+  font-size: clamp(20px, 4vw, 24px);
+  font-weight: 400;
   line-height: 1.2;
   margin: 0;
 }
 
 h3 {
   font-size: clamp(20px, 4vw, 20px);
-  font-weight: 600;
+  font-weight: 400;
   line-height: 1.2;
+  margin: 0;
+}
+
+p {
+  font-size: clamp(14px, 1.2vw, 18px);
+  line-height: 1.8;
   margin: 0;
 }
 
@@ -94,11 +100,6 @@ a {
 
 a:hover {
   color: var(--main-color);
-}
-
-p {
-  font-size: clamp(14px, 1.2vw, 18px);
-  line-height: 1.8;
 }
 
 button {
@@ -140,7 +141,7 @@ form {
 form #input {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 50px;
+  gap: clamp(20px, 4vw, 50px);
 }
 form > *:first-child {
   margin-bottom: 20px;
@@ -149,7 +150,7 @@ form > *:first-child {
 input,
 textarea {
   padding-block: 10px;
-  margin-bottom: 20px;
+  margin-bottom: clamp(10px, 1vw, 20px);
   width: 100%;
   border: none;
   border-bottom: 1px solid #ccc;
@@ -158,7 +159,8 @@ textarea {
 }
 
 textarea {
-  min-height: 100px;
+  height: 8vw;
+  min-height: 75px;
   background: transparent;
 }
 
@@ -185,25 +187,26 @@ textarea::placeholder {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 440px) {
-  ._container {
-    gap: 0;
-    padding: 20px;
-  }
-}
-
 .grid-2 {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(45%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   margin: auto auto;
-  gap: 50px;
   width: 100%;
 }
 
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 992px) {
+  ._container {
+    width: auto;
+    max-width: 100%;
+  }
+
   .grid-2 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 440px) {
+  ._container {
+    padding: 50px 20px;
   }
 }
