--- a/src/components/Mod-Slide/modslide.css
+++ b/src/components/Mod-Slide/modslide.css
@@ -1,86 +1,72 @@
-body {
-  overflow: hidden;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  place-items: center;
-}
-
-#container_box_slide {
+.container_slide {
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100%;
 }
 
-#box_slide {
-  position: relative;
-  height: 500px;
+#mod_slide {
   overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+  gap: 10px;
+  height: 30vw;
   width: 100%;
-  margin: 0 auto;
-  display: flex;
-  gap: 20px;
 }
 
-::-webkit-scrollbar {
-  opacity: 1;
-}
-
-.box_items {
-  display: flex;
-  width: 20%;
-  height: 100%;
-  transition: 0.5s ease;
-  cursor: pointer;
+.slide_items {
   position: relative;
   z-index: 1;
-  filter: brightness(0.5);
+  width: 20%;
+  transition: 0.3s ease-in-out;
+}
+
+.slide_items > div {
   pointer-events: none;
   user-select: none;
 }
 
-.box_items img {
+.slide_items.active {
+  width: 50%;
+}
+
+.slide_img {
+  height: 100%;
+}
+
+.slide_img img {
   position: relative;
   z-index: 0;
   height: 100%;
   width: 100%;
   object-fit: cover;
-  pointer-events: none;
-  user-select: none;
 }
 
-.box_items article {
+.slide_items.active .slide_text {
+  visibility: visible;
+  bottom: 0;
+}
+
+.slide_text {
+  visibility: hidden;
   position: absolute;
-  bottom: -100%;
-  background: rgba(0, 0, 0, 0.7);
-  color: #fff;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  bottom: -50%;
   padding: 15px;
-  transition: 0.5s;
+  background: rgb(0, 0, 0, 80%);
+  color: #fff;
+  transition: 0.3s ease-in-out;
 }
 
-.box_items h2 {
-}
-
-.box_items p {
-}
-
-.box_items.active {
-  filter: unset;
-  width: 50%;
-}
-
-.box_items.active article {
-  bottom: 0px;
-}
-
-#dot-indicators {
-  position: absolute;
-  bottom: -30px;
+#slide_dot {
   display: flex;
   place-content: center;
   gap: 8px;
   width: 100%;
+  padding: 15px;
 }
 
 .dot {
