--- a/src/style/app.css
+++ b/src/style/app.css
@@ -17,7 +17,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-size: clamp(14px, 1vw, 16px);
+  font-size: clamp(16px, 1vw, 16px);
   color: var(--font-color);
 }
 
@@ -72,7 +72,6 @@ h3 {
 }
 
 p {
-  font-size: clamp(14px, 1.2vw, 18px);
   line-height: 1.8;
   margin: 0;
 }
@@ -98,7 +97,7 @@ button {
   min-width: 120px;
   height: fit-content;
   border: none;
-  border-radius: 30px;
+  border-radius: 8px;
   padding: 15px 20px 12px;
   margin: auto;
   font-size: clamp(14px, 1vw, 16px);
@@ -177,7 +176,7 @@ textarea::placeholder {
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  padding: 7vw 0;
+  padding: clamp(50px, 10vw, 150px) 0;
   width: 100%;
   max-width: 70vw;
   margin: 0 auto;
@@ -185,8 +184,8 @@ textarea::placeholder {
 
 .grid-default {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  margin: 50px 0;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  margin: clamp(50px, 10vw, 80px) auto;
 }
 
 .grid-content {
@@ -199,9 +198,64 @@ textarea::placeholder {
   display: grid;
   width: 100%;
   height: 100%;
-  max-width: 25vw;
+  max-width: 20vw;
   min-width: 250px;
   margin: auto;
+}
+
+/*package content*/
+.package-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 40px;
+  width: 100%;
+  margin: clamp(50px, 10vw, 50px) auto;
+}
+
+.package-items {
+  display: grid;
+  gap: 20px;
+  background: var(--main-white);
+  box-shadow: var(--box-shadow1);
+  padding: 50px 20px 20px;
+  border-radius: 12px;
+  text-align: center;
+}
+
+.package-title {
+  color: var(--font-color2);
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.package-price {
+  position: relative;
+  color: var(--main-color);
+  font-size: 44px;
+  font-weight: 600;
+}
+
+.package-price::after {
+  content: "Per/Month";
+  display: block;
+  color: var(--font-color2);
+  font-size: 22px;
+  font-weight: 400;
+  border-bottom: 1px solid var(--main-color);
+  padding-bottom: 20px;
+}
+
+.package-price-sub {
+  position: relative;
+}
+
+.package-details {
+  color: var(--font-color2);
+}
+
+button.package-button {
+  margin: 20px auto;
+  width: 85%;
 }
 
 @media screen and (max-width: 992px) {
@@ -222,6 +276,6 @@ textarea::placeholder {
 
 @media screen and (max-width: 440px) {
   ._container {
-    padding: 50px 20px;
+    padding: 50px 30px;
   }
 }
