--- a/src/style/app.css
+++ b/src/style/app.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 :root {
   --main-white: #fff;
   --main-overlay: #f2f5fd;
@@ -51,7 +49,7 @@ img {
 }
 
 h1 {
-  font-size: clamp(24px, 4vw, 68px);
+  font-size: clamp(24px, 4vw, 60px);
   font-weight: 200;
   line-height: 1.2;
   margin: 0;
@@ -185,6 +183,10 @@ textarea::placeholder {
   margin: clamp(50px, 10vw, 80px) auto;
 }
 
+.center {
+  text-align: center;
+}
+
 .grid-content {
   display: grid;
   width: 100%;
@@ -253,6 +255,27 @@ textarea::placeholder {
 button.package-button {
   margin: 20px auto;
   width: 85%;
+}
+
+/*footer*/
+#Footer {
+  background: var(--main-overlay);
+}
+
+.footer-content {
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  text-align: left;
+}
+
+.footer-menu {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer-content a {
+  text-transform: unset;
 }
 
 @media screen and (max-width: 992px) {
