--- a/src/style/app.css
+++ b/src/style/app.css
@@ -7,7 +7,6 @@
   --font-color2: #535768;
   --main-color: #6161ff;
   --box-shadow1: rgba(97, 97, 255, 0.5) 0px 3px 15px;
-  font-family: "Poppins";
 }
 
 * {
@@ -17,8 +16,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-size: 16px;
   color: var(--font-color);
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Poppins";
 }
 
 body.dark-mode {
@@ -88,6 +89,7 @@ a {
   text-transform: uppercase;
   color: var(--font-color);
   font-size: clamp(14px, 1.2vw, 16px);
+  font-weight: 400;
 }
 
 a:hover {
@@ -176,8 +178,8 @@ textarea::placeholder {
 ._container {
   display: grid;
   gap: 20px;
-  padding: clamp(50px, 10vw, 150px) 0;
-  width: 70%;
+  padding: clamp(50px, 10vw, 120px) 0;
+  width: 60vw;
   margin: 0 auto;
 }
 
@@ -200,7 +202,7 @@ textarea::placeholder {
 .package-content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 40px;
+  gap: 20px;
   width: 100%;
   margin: clamp(50px, 10vw, 50px) auto;
 }
