--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,3 @@
-@import url("@/style/font.css");
-
 :root {
   --main-white: #fff;
   --main-overlay: #f2f5fd;
@@ -50,13 +48,13 @@ main {
 img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 h1 {
   font-size: clamp(24px, 4vw, 60px);
   font-weight: 200;
-  line-height: 1.2;
+  line-height: 1.5;
   margin: 0;
 }
 
