--- a/src/css/app.css
+++ b/src/css/app.css
@@ -48,7 +48,7 @@ main {
 img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 h1 {
@@ -156,8 +156,7 @@ textarea {
 }
 
 textarea {
-  height: 8vw;
-  min-height: 75px;
+  height: clamp(60px, 8vw, 80px);
   background: transparent;
 }
 
@@ -257,8 +256,7 @@ button.package-button {
   }
 
   ._container {
-    width: 100%;
-    padding: 50px 20px;
+    width: 85vw;
   }
 
   .grid-default {
